# humanophone

./: Cargo.toml  QUIBBLES.md  README.md  TODO.md
.github/workflows/: rust.yml
abegg/: Cargo.toml  README.md
abegg/src/: main.rs  pitches.rs  playback.rs  tone.rs
client/: Cargo.toml
client/src/: main.rs
client_utils/: Cargo.toml  README.md
client_utils/src/: lib.rs
horeau/: Cargo.toml  README.md  index.html
horeau/src/: main.rs
jobbard/: Cargo.toml  song.json
jobbard/src/: main.rs
jun/: Cargo.toml  README.md  selfsigned-cert.sh
jun/src/: lib.rs
morivar/: Cargo.toml  README.md  deps.dot  readme.md
morivar/src/: cli.rs  lib.rs  to_message.rs
pehnt/: Cargo.toml  README.md
pehnt/src/: main.rs
pekisch/: Cargo.toml  README.md
pekisch/src/: main.rs  midi.rs
piano/: Cargo.toml
piano/src/: main.rs
quinnipak/: Cargo.toml  README.md  client.py  readme.md  selfsigned-cert.sh
quinnipak/src/: cli.rs  consumer.rs  lib.rs  main.rs  publisher.rs  secure.rs
server/: Cargo.toml
server/src/: main.rs
slinger/: Cargo.toml  README.md
slinger/src/: main.rs
src/: lib.rs  main.rs
