[package]
name = "client_utils"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
futures-util = "0.3.31"
http = "0.2.12"
morivar = { path = "../morivar", features = ["message"] }
rand = "0.8.5"
tokio = { version = "1.41.0", features = ["full"] }
tokio-native-tls = "0.3.1"
tokio-websockets = { version = "0.3.3", features = ["client", "native-tls"] }
tracing = "0.1.40"
simple-tokio-watchdog = { git = "https://github.com/barafael/watchdog.git" }
