[package]
name = "horeau"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
kord = { git = "https://github.com/barafael/kord.git", branch = "wasm-main-feature", features = [
    "serde",
    "wasm",
    "wasm_no_main",
], default-features = false }
morivar = { path = "../morivar" }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
yew = { version = "0.20.0", features = ["csr"] }
yew-websocket = "1.0.0"
