[package]
name = "horeau"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
kord = { git = "https://github.com/twitchax/kord.git", features = [
    "serde",
    "wasm",
], default-features = false }
morivar = { path = "../morivar" }
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["fmt", "std"] }
tracing-web = "0.1.2"
wasm-bindgen = "0.2.87"
yew = { version = "0.20.0", features = ["csr"] }
yew-websocket = "1.0.0"
