[package]
name = "morivar"
version = "0.1.0"
edition = "2021"

[features]
message = ["dep:tokio-websockets"]
cli = ["dep:clap"]

[dependencies]
clap = { version = "4", features = ["derive"], optional = true }
http = "0.2.12"
kord = { git = "https://github.com/twitchax/kord.git", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-websockets = { version = "0.3.3", optional = true }
