[package]
name = "pekisch"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.8", features = ["derive"] }
futures-util = "0.3.28"
http = "0.2.9"
kord = { git = "https://github.com/twitchax/kord.git" }
midir = "0.9.1"
midly = "0.5.3"
morivar = { path = "../morivar", features = ["message", "cli"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.28.2", features = ["full"] }
tokio-native-tls = "0.3.1"
tokio-websockets = { version = "0.3.3", features = ["client", "native-tls"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
