[package]
name = "pekisch"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
clap = { version = "4.5.20", features = ["derive"] }
client_utils = { path = "../client_utils" }
futures-util = "0.3.31"
http = "0.2.12"
kord = { git = "https://github.com/twitchax/kord.git" }
midir = "0.9.1"
midly = "0.5.3"
morivar = { path = "../morivar", features = ["message", "cli"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.41.0", features = ["full"] }
tokio-native-tls = "0.3.1"
tokio-websockets = { version = "0.3.3", features = ["client"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
simple-tokio-watchdog = { git = "https://github.com/barafael/watchdog.git" }
