[package]
name = "humanophone-piano"
version = "0.1.0"
edition = "2021"

[dependencies]
futures-util = "0.3.28"
http = "0.2.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.28.1", features = ["full"] }
tokio-websockets = { version = "0.3.2", features = ["server"] }
kord = { git = "https://github.com/barafael/kord.git", features = ["serde"] }
anyhow = "1.0.71"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
midir = "0.9.1"
midi-control = "0.2.2"
humanophone-server = { path = "../server" }
