[package]
name = "quinnipak"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive"] }
futures-util = "0.3.28"
http = "0.2.9"
kord = { git = "https://github.com/twitchax/kord.git" }
morivar = { path = "../morivar" }
rustls = "0.21.1"
rustls-pemfile = "1.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.28.1", features = ["full"] }
tokio-rustls = "0.24.0"
tokio-websockets = { version = "0.3.2", features = ["server"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
