[package]
name = "quinnipak"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.1", features = ["derive"] }
either = "1.8.1"
futures-util = "0.3.28"
http = "0.2.9"
kord = { git = "https://github.com/twitchax/kord.git" }
morivar = { path = "../morivar", features = ["message"] }
rustls = "0.21.1"
rustls-pemfile = "1.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
tokio-rustls = "0.24.0"
tokio-websockets = { version = "0.3.2", features = ["server"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
watchdog = { git = "https://github.com/barafael/watchdog.git" }
